# brel

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  brel.toml  dist-workspace.toml  lefthook.yml  mise.toml
.github/workflows/: release-cargo.yml  release-pr.yml  release.yml
src/: cli.rs  config.rs  init.rs  main.rs  release_pr.rs  tag_template.rs  template.rs  version_selector.rs  version_update.rs  workflow.rs
templates/workflows/github/: release-pr.yml.hbs
tests/: cli.rs
