[dependencies]
anyhow = "1.0.97"
dialoguer = "0.11.0"
handlebars = "6.3.1"
semver = "1.0.25"
serde_json = "1.0.140"
similar = "2.7.0"
toml = "0.8.20"
toml_edit = "0.22.27"

[dependencies.clap]
features = ["derive"]
version = "4.5.31"

[dependencies.serde]
features = ["derive"]
version = "1.0.218"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.17.1"

[package]
description = "better-releases cli tool"
edition = "2024"
exclude = ["brel.toml"]
homepage = "https://better-releases.com"
license = "MIT"
name = "brel"
readme = "README.md"
repository = "https://github.com/better-releases/brel"
version = "0.3.1"

[profile.dist]
inherits = "release"
lto = "thin"
